--- a/src/app/slider-game/slider-game.component.html
+++ b/src/app/slider-game/slider-game.component.html
@@ -1,8 +1,6 @@
-<p>
-  slider-game works!
-</p>
 <div class="game-row" *ngFor="let gameRow of gameRows">
   <div class="game-col" *ngFor="let spot of gameRow.columns">
-    {{ spot.row }}, {{ spot.column}}
+    <slider-game-piece (click)="pieceClicked(spot)" [gamePiece]="spot.gamePiece">
+    </slider-game-piece>
   </div>
 </div>
